upgrades descriptions with animations

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -138,26 +138,27 @@
     <section class="section section--upgrades">
       <h2 class="section__h2">Upgrades</h2>
       <div class="section__container section__container--upgrades">
-        <div class="section__tile"><img src="../assets/img/upgradeAll1.svg" class="section__image section__image--upgrades" alt=""/></div>
-        <div class="section__tile"><img src="../assets/img/upgradeAll2.svg" class="section__image section__image--upgrades" alt=""/></div>
-        <div class="section__tile"><img src="../assets/img/upgradeClicker1.svg" class="section__image section__image--upgrades" alt=""/></div>
-        <div class="section__tile"><img src="../assets/img/upgradeClicker2.svg" class="section__image section__image--upgrades" alt=""/></div>
-        <div class="section__tile"><img src="../assets/img/upgradePeasants1.svg" class="section__image section__image--upgrades" alt=""/></div>
-        <div class="section__tile"><img src="../assets/img/upgradePeasants2.svg" class="section__image section__image--upgrades" alt=""/></div>
-        <div class="section__tile"><img src="../assets/img/upgradeMercenearies1.svg" class="section__image section__image--upgrades" alt=""/></div>
-        <div class="section__tile"><img src="../assets/img/upgradeMercenearies2.svg" class="section__image section__image--upgrades" alt=""/></div>
-        <div class="section__tile"><img src="../assets/img/upgradePriest1.svg" class="section__image section__image--upgrades" alt=""/></div>
-        <div class="section__tile"><img src="../assets/img/upgradePriest2.svg" class="section__image section__image--upgrades" alt=""/></div>
-        <div class="section__tile"><img src="../assets/img/upgradeKnights1.svg" class="section__image section__image--upgrades" alt=""/></div>
-        <div class="section__tile"><img src="../assets/img/upgradeKnights2.svg" class="section__image section__image--upgrades" alt=""/></div>
-        <div class="section__tile"><img src="../assets/img/upgradePaladins1.svg" class="section__image section__image--upgrades" alt=""/></div>
-        <div class="section__tile"><img src="../assets/img/upgradePaladins2.svg" class="section__image section__image--upgrades" alt=""/></div>
-        <div class="section__tile"><img src="../assets/img/upgradeDragons1.svg" class="section__image section__image--upgrades" alt=""/></div>
-        <div class="section__tile"><img src="../assets/img/upgradeDragons2.svg" class="section__image section__image--upgrades" alt=""/></div>
+        <div class="section__tile"><button class="section__button section__button--upgrade section__button--all1"><img src="../assets/img/upgradeAll1.svg" class="section__image section__image--upgrades" alt=""/></button></div>
+        <div class="section__tile"><button class="section__button section__button--upgrade section__button--all2"><img src="../assets/img/upgradeAll2.svg" class="section__image section__image--upgrades" alt=""/></button></div>
+        <div class="section__tile"><button class="section__button section__button--upgrade section__button--clicker1"><img src="../assets/img/upgradeClicker1.svg" class="section__image section__image--upgrades" alt=""/></button></div>
+        <div class="section__tile"><button class="section__button section__button--upgrade section__button--clicker2"><img src="../assets/img/upgradeClicker2.svg" class="section__image section__image--upgrades" alt=""/></button></div>
+        <div class="section__tile"><button class="section__button section__button--upgrade section__button--peasants1"><img src="../assets/img/upgradePeasants1.svg" class="section__image section__image--upgrades" alt=""/></button></div>
+        <div class="section__tile"><button class="section__button section__button--upgrade section__button--peasants2"><img src="../assets/img/upgradePeasants2.svg" class="section__image section__image--upgrades" alt=""/></button></div>
+        <div class="section__tile"><button class="section__button section__button--upgrade section__button--mercenearies1"><img src="../assets/img/upgradeMercenearies1.svg" class="section__image section__image--upgrades" alt=""/></button></div>
+        <div class="section__tile"><button class="section__button section__button--upgrade section__button--mercenearies2"><img src="../assets/img/upgradeMercenearies2.svg" class="section__image section__image--upgrades" alt=""/></button></div>
+        <div class="section__tile"><button class="section__button section__button--upgrade section__button--priests1"><img src="../assets/img/upgradePriest1.svg" class="section__image section__image--upgrades" alt=""/></button></div>
+        <div class="section__tile"><button class="section__button section__button--upgrade section__button--priests2"><img src="../assets/img/upgradePriest2.svg" class="section__image section__image--upgrades" alt=""/></button></div>
+        <div class="section__tile"><button class="section__button section__button--upgrade section__button--knights1"><img src="../assets/img/upgradeKnights1.svg" class="section__image section__image--upgrades" alt=""/></button></div>
+        <div class="section__tile"><button class="section__button section__button--upgrade section__button--knights2"><img src="../assets/img/upgradeKnights2.svg" class="section__image section__image--upgrades" alt=""/></button></div>
+        <div class="section__tile"><button class="section__button section__button--upgrade section__button--paladins1"><img src="../assets/img/upgradePaladins1.svg" class="section__image section__image--upgrades" alt=""/></button></div>
+        <div class="section__tile"><button class="section__button section__button--upgrade section__button--paladins2"><img src="../assets/img/upgradePaladins2.svg" class="section__image section__image--upgrades" alt=""/></button></div>
+        <div class="section__tile"><button class="section__button section__button--upgrade section__button--dragons1"><img src="../assets/img/upgradeDragons1.svg" class="section__image section__image--upgrades" alt=""/></button></div>
+        <div class="section__tile"><button class="section__button section__button--upgrade section__button--dragons2"><img src="../assets/img/upgradeDragons2.svg" class="section__image section__image--upgrades" alt=""/></button></div>
       </div>
-      <article>
-        <h3 class="section__h3 section__h3--upgrades">lorem</h3>
-        <p class="section__paragraph section__paragraph--upgrades">lorem ipsum</p></article>
+      <article class="section__article section__article--upgrades">
+        <h3 class="section__h3 section__h3--upgrades"></h3>
+        <p class="section__paragraph section__paragraph--upgrades"></p>
+      </article>
     </section>
   </main>
 </body>
